# practica

./: CMakeLists.txt
Laba1/: CMakeLists.txt
Laba1/task1/: CMakeLists.txt  task1.c
Laba1/task2/: CMakeLists.txt  task2.c
Laba1/task3/: CMakeLists.txt
Laba1/task4/: CMakeLists.txt  task4.c
Laba1/task5/: CMakeLists.txt  task5_main.c
Laba1/task6/: CMakeLists.txt  task6_main.c
Laba1/task7/: CMakeLists.txt  func.h  task7_main.c
Laba1/task8/: CMakeLists.txt
Laba2/: CMakeLists.txt
Laba2/task1/: CMakeLists.txt
Laba2/task1/src_exe/: CMakeLists.txt  main1.c
Laba2/task1/src_lib_1/: CMakeLists.txt  f1.c
Laba2/task1/src_lib_2/: CMakeLists.txt  f2.c
Laba3/: CMakeLists.txt
Laba3/Laba3/: CMakeLists.txt
Laba3/Laba3/src_exe/: CMakeLists.txt  main.c
Laba3/Laba3/src_lib_do_while/: CMakeLists.txt  func.c
Laba3/Laba3/src_lib_for/: CMakeLists.txt  func.c
Laba3/Laba3/src_lib_while/: CMakeLists.txt  func.c
Laba4/: CMakeLists.txt
Laba4/Laba4/: CMakeLists.txt
Laba4/Laba4/task1/: CMakeLists.txt
Laba4/Laba4/task1/Includes/: f.h
Laba4/Laba4/task1/src_exe/: CMakeLists.txt  main.c
Laba4/Laba4/task1/src_lib/: CMakeLists.txt  func.c
Laba4/Laba4/task2/Includes/: f.h
Laba4/Laba4/task2/src_exe/: CMakeLists.txt  main.c
Laba4/Laba4/task2/src_lib/: CMakeLists.txt  readArray.c  sort.c  writeArray.c
Laba5/: CMakeLists.txt
Laba5/Laba5/: CMakeLists.txt
Laba5/Laba5/include/: func.h
Laba5/Laba5/src_exe/: CMakeLists.txt  main.c
Laba5/Laba5/src_lib/: CMakeLists.txt  task1.c  task2.c  task3.c  task4.c  task5.c  task6.c
Laba6/: CMakeLists.txt
Laba6/Laba6/: CMakeLists.txt  Laba6.c
Laba7/: CMakeLists.txt
Laba7/task1/src_exe/: CMakeLists.txt  main.c
Laba7/task1/src_lib/: CMakeLists.txt  func.c
Laba7/task2/src_exe/: CMakeLists.txt  main.c
Laba7/task2/src_lib/: CMakeLists.txt  readArray.c  sort.c  sortHeapArray.c
Laba7/task3/src_exe/: CMakeLists.txt  main.c
Laba7/task3/src_lib/: CMakeLists.txt  delete.c  find.c  insert.c  strcat.c  strcpy.c
