# CMakeList.txt: проект CMake дл€ Laba3; включите исходный код и определени€,
# укажите здесь логику дл€ конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# ƒобавьте источник в исполн€емый файл этого проекта.
add_subdirectory("src_lib_for")
add_subdirectory("src_lib_while")
add_subdirectory("src_lib_do_while")
add_subdirectory("src_exe")